--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stackline-assessment",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://saman67.github.io/stackline-assessment/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -30,13 +31,16 @@
     "@types/d3": "^7.4.3",
     "@types/luxon": "^3.4.2",
     "@types/numeral": "^2.0.5",
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
